# FULivePC

./: .gitattributes  .gitignore  CMakeLists.txt  FULivePC.sln  NamaExample.sln  README.md  funama.h  imgui.ini  readme.md  run_cmake-orign.bat  run_cmake-x64.bat  run_cmake-x86.bat  run_cmake.bat  run_cmake.sh  run_cmakeWin32.bat
Example/: NamaExample.sln
Example/NamaExample/: CameraDS.cpp  CameraDS.h  GlobalValue.cpp  GlobalValue.h  Nama.cpp  Nama.h  NamaExample.vcxproj  NamaExample.vcxproj.filters  main.cpp
Example/NamaExample/CrashReport/: CrashReport.cpp  CrashReport.h
FULivePC/: BgSegUpdate.cpp  BgSegUpdate.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.h  FULivePC.cpp  FULivePC.pro  FULivePC.vcxproj  FULivePC.vcxproj.filters  FuController.cpp  FuController.h  Nama.cpp  Nama.h  ReadMe.txt  UIBridge.cpp  UIBridge.h  UIBridge.mm  imgui.ini
FULivePC/GLContext/: NaMaGLContext.h  NaMaGlContext.mm
FULivePC/GUI/: Gui.cpp  Gui.h  GuiBgSeg.cpp  GuiBgSeg.h  GuiCustomMakeup.cpp  GuiCustomMakeup.h  GuiGS.cpp  GuiGS.h  GuiSticker.cpp  GuiSticker.h  GuiTabContent.cpp  GuiTabContent.h  GuiTool.cpp  GuiTool.h  Loader.cpp  Loader.h  MouseControl.cpp  MouseControl.h  Texture.cpp  Texture.h
FULivePC/MAC_DATA/: AppIcon.icns  Info.plist
FULivePC/MAC_DATA/ResPic.bundle/: readme.md
FULivePC/MAC_DATA/Resource.bundle/: config.json
FULivePC/Network/: StickerHolder.cpp  StickerHolder.h
FULivePC/Sound/: MP3.cpp  MP3.h  MP3_mac.h  MP3_mac.mm
FULivePC/common/: fu_shared_obj.cpp  fu_tool.cpp  fu_tool_mac.mm
FULivePC/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_tabs.cpp  imgui_tabs.h
FULivePC/ipc/: filtercommons.h  ipcbridge.cpp
FULivePC/tinfiledlg/: tinyfiledialogs.h
FuLivePCQT/: CMakeLists.txt  Camera.cpp  Camera.h  CameraDisplay.cpp  CameraDisplay.h  Config.h  FuController.cpp  FuController.h  FuLivePCQT.pro  ImageProvider.cpp  ImageProvider.h  MainClass.cpp  MainClass.h  Nama.cpp  Nama.h  UIBridge.cpp  UIBridge.h  authpack.h  main.cpp  qml.qrc
FuLivePCQT/Network/: StickerHolder.cpp  StickerHolder.h
FuLivePCQT/Sound/: MP3.cpp  MP3.h
FuLivePCQT/common/: fu_tool.cpp  fu_tool_mac.mm
FuLivePCQT/qml/: main.qml  mainSim.qml
FuLivePCQT/qml/content/: ColorCircle.qml  CustomSlider.qml  ListViewProp.qml  ListViewPropOption.qml  ListViewSide.qml  RectangleButtonGreenScreen.qml  RectangleButtonImage.qml  RectangleButtonSolid.qml  RectangleButtonText.qml  RectangleTabContent.qml  TextBlack.qml
NamaExample/: CameraDS.cpp  CameraDS.h  GLWidget.cpp  GLWidget.h  GlobalValue.cpp  GlobalValue.h  Nama.cpp  Nama.h  NamaExample.aps  NamaExample.cpp  NamaExample.h  NamaExample.pri  NamaExample.pro  NamaExample.qrc  NamaExample.rc  NamaExample.ui  NamaExample.vcxproj  NamaExample.vcxproj.filters  buttonimages.qrc  main.cpp  nama_log.txt
NamaExample/Resources/qdarkstyle/: style.qss
NamaExample/image/: stb_image.c  stb_image.h  stb_image_write.c  stb_image_write.h  stb_truetype.c  stb_truetype.h  wrapper_defines.h
ThridParty/GL/: glew32mx.lib  glew32mxs.lib  glew32s.lib
ThridParty/VirtualCamera/x64/: ReadMe.txt
ThridParty/imgui/: gl3w.c  imgui.cpp  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_tabs.cpp  imgui_tabs.h
Win32/: nama.lib
Win64/: nama.lib
assets/: anim_model.bundle  bg_seg.bundle  body_slim.bundle  colorConfig.json  face_beautification.bundle  face_makeup.bundle  fu_zh_duzui.bundle  fxaa.bundle  gradient.bundle  hair_gradient.bundle  hair_normal.bundle  heart.bundle  huangya_Animoji.bundle  item0204.bundle
assets/AI_model/: ai_bgseg.bundle  ai_bgseg_green.bundle  ai_hairseg.bundle
assets/Avatars/: fakeman.bundle
assets/graphics/: aitype.bundle  body_slim.bundle  controller.bundle  controller_cpp.bundle  face_beautification.bundle  face_beautification_v2.bundle  face_makeup.bundle  face_makeup.bundle,bk  flower_particle.bundle  fxaa.bundle  fxaa_flipX.bundle  fxaa_flipY.bundle  image_beauty.bundle  tongue.bundle
assets/model/: ai_bgseg.bundle  ai_bgseg_green.bundle  ai_face_attribute_processor.bundle  ai_face_processor_landmark75_lite.bundle  ai_gesture.bundle  ai_hairseg.bundle  ai_hand_processor.bundle  ai_human_pose.bundle  ai_human_processor_segmentation_mb.bundle  gesture.bundle  mocap.bundle
assets/others/: air_battle.bundle  baimao_Animoji.bundle  bg_segment.bundle  boyfriend1_740.bundle  boyfriend2_740.bundle  boyfriend3_740.bundle  ctrl_flower_740.bundle  ctrl_snow_740.bundle  douniuquan_Animoji.bundle  expression_shooting_740.bundle  face_half.bundle  green_screen.bundle  green_screen_740.bundle  gufeng_zh_fu.bundle  hair_gradient.bundle  hair_normal.bundle  hand_rect_740.bundle  hashiqi_Animoji.bundle  hetun_Animoji.bundle  hez_ztt_fu.bundle  huangya_Animoji.bundle  human_mask.bundle  human_outline_740.bundle  ice_lm_fu.bundle  landmarks.bundle  light_makeup_740.bundle  qgirl_Animoji.bundle  sdx2_740.bundle  sea_lm_fu.bundle  xiandai_ztt_fu.bundle
docs/: FUAI_C_API_Reference.md  FUAI_C_API_参考文档.md  FUNama SDK v4.4 更新文档.md  FUNama SDK 帮助文档.md  Init_OpenGL.md  Mac_Nama_Demo_Guide.md  Mac_Nama_Demo_运行文档.md  Mac_Nama_OC_API_Reference.md  Mac_Nama_OC_API_参考文档.md  Mac_Nama_SDK_Integration_Guide.md  Mac_Nama_SDK_集成指导文档.md  Nama_C_API_Reference.md  Nama_C_API_参考文档.md  Nama_Demo_Guide.md  Nama_Demo_运行文档.md  Nama_SDK_Integration_Guide.md  Nama_SDK_集成指导文档.md  Windows_Nama_Demo_Guide.md  Windows_Nama_Demo_运行文档.md  Windows_Nama_SDK_集成指导文档.md  controller功能文档.md  ~$ma_C_API_参考文档.md  美妆道具功能文档.md  美颜道具功能文档.md
docs/resource/: 美妆道具功能文档.md  美颜道具功能文档.md
docs/sample/: fuai_interface_sample.cc
include/: FURenderer.h  funama.h
include/common/: fu_common_def.h  fu_lock_mutex.h  fu_shared_obj.h  fu_singleton.h  fu_tool.h  fu_tool_mac.h  fu_uncopyable.h
res/: config.json  desktop.ini  mu_lip_01.json  mu_lip_03.json  mu_lip_10.json  mu_lip_11.json  mu_lip_12.json  mu_lip_13.json  mu_lip_14.json  mu_lip_15.json  mu_lip_16.json  mu_lip_17.json  mu_lip_18.json  mu_lip_19.json  mu_lip_20.json  mu_lip_21.json  mu_lip_22.json
script/: GuiGS.cpp  add-bom-for-files-in-folder.sh  convert-to-utf8-with-signature.sh  find-file-with-encoding.sh
(+92 files in other folders)
